Added forked dependency of twemoji lib

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "flazepe",
   "dependencies": {
     "canvas": "^2.7.0",
-    "twemoji": "^13.0.1"
+    "twemoji": "github:jdecked/twemoji"
   },
   "license": "MIT",
   "repository": {
