Update twemoji module & lock.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "flazepe",
   "dependencies": {
     "canvas": "^2.7.0",
-    "twemoji": "github:vadymKaptan360/twemoji"
+    "twemoji": "npm:@twemoji/api@^14.1.0",
+    "twemoji-parser": "npm:@twemoji/parser@^14.1.0"
   },
   "license": "MIT",
   "repository": {
